--- a/untitled/templates/index.html
+++ b/untitled/templates/index.html
@@ -108,7 +108,13 @@
   <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Computer Vision Freelancer</h3>
-              <p></p>
+              <p>Developed products for industry computer vision use cases. Product domains range from customer analytics to augmented reality based systems.
+              </p>
+                <p>Key Work Areas:<br/>
+                    Image based Sentiment Analysis | Object measurement using Image processing | Object tracking systems | Realtime object detection over web</p>
+                <p> Tech Stack<br/>
+
+                    Worked extensively with OpenCV DNN | Tensorflow and tflearn | darkflow and darknet | object tracking with camshift, correlation, optical flow, IOU tracking etc | C++ Simple Web Sockets | JSFeat, js image processing libraries  </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2018 - Present</span>
@@ -119,7 +125,12 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Associate Engineer, Digital Image Processing</h3>
               <div class="subheading mb-3">Cognitive Machines</div>
-              <p></p>
+                <p>Worked as an integral part of multiple projects in Computer Vision. I was tasked with a major portion of Machine Learning based algorithm development.</p>
+                <p>
+                    Key Work Areas:<br/>
+                    Deep learning based Object Detection | Machine Learning Metric Development | Inference optimization on various platforms | Vision pipelines for Object Detection
+                </p><p>Tech Stack: <br/>
+                  AWS ( S3, SageMaker, CodeBuild, EC2, CodePipeline, AWS ECS, Lambda ) | Tensorflow | OpenCV dnn module in C++ and python | OpenCV tracking contrib modules | Metabase for report logging | Android C++ NDK for dnn inference | Kinect SDK | Random Forest Inference for Kinect Skeletal tracking | Websockets in Tornado | SSD; YOLO; TensorBox training and inference pipelines.   </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2017 - April 2018</span>
@@ -130,7 +141,18 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">NLP Developer</h3>
               <div class="subheading mb-3">Signify, Digital Impact Square</div>
-              <p></p>
+              <p>
+Social Innovator at TCS Foundation's Digital Impact Square in collaboration with MIT Media Labs.
+
+                  At DISQ, I was a founding member at Team Signify- Creating a system to provide free communication and a voice to the deaf and dumb community. </p>
+<p>
+Key work areas:<br/>
+Field Research | Impact Assessment | Prototype development and Validation | Assistive Technology
+</p>
+                <p>
+                    Tech Stack:<br/>
+Django | NLTK | TextBlob | MoviePy | Speech processing
+</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2016 - December 2017</span>
@@ -208,6 +230,24 @@
 
           </ul>
 
+            <div class="subheading mb-3">Libraries and Frameworks</div>
+            <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Image Processing and Computer Vision using OpenCV, Tensorflow, Keras, Scikit-Learn, Pandas, Numpy </li>
+            <li>
+
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Natural Language: NLTK, SpaCy, Textblob, ApacheNLP</li>
+
+              <i class="fa-li fa fa-check"></i>
+              Deep Learning models: YOLO, SSD, ResNet, Inception, SentimentNet</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Full stack development: Django, Javascript, CSS3, HTML5, jQuery</li>
+
+          </ul>
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -221,14 +261,33 @@
               Training and construction of ML, DL pipelines for different problem statements</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development and Scrum</li>
+              Agile Development Principles</li>
+              <li>
           </ul>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
+          <h2 class="mb-5">Projects</h2>
+            <ul>
+                  <li>
+              <i class="fa-li fa fa-android"></i>
+                    Poly - Context based language learning app
+                      <p>Uses computer vision object detection algorithms to identify objects in current view and helps learn words in different languages for them. These words can also be used to learn relevant context based sentences.</p>
+                  </li>
+                 <li>
+              <i class="fa-li fa fa-facebook"></i>
+                     HungerHero - Chatbot based social benefit food delivery platform
+                     <p>A facebook based chat platform paired with a realtime backend to collect extra food from people and deliver it to HungerHero food partners, who then distribute it to the needy</p>
+                  </li>
+{#                 <li>#}
+{#              <i class="fa-li fa fa-arrow-right"></i>#}
+{#                     #}
+{#                  </li>#}
+
+
+            </ul>
 {#          <p>Apart from being a Computer Vision Engineer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>#}
 {#          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>#}
         </div>
@@ -238,12 +297,12 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
-{#            <li>#}
-{#              <i class="fa-li fa fa-trophy text-warning"></i>#}
-{#              Google Analytics Certified Developer</li>#}
-{#            <li>#}
-{#              <i class="fa-li fa fa-trophy text-warning"></i>#}
-{#              Mobile Web Specialist - Google Certification</li>#}
+            <li>
+              <i class="fa-li fa fa-certificate text-warning"></i>
+              Machine Learning by Andrew Ng, Coursera</li>
+            <li>
+              <i class="fa-li fa fa-certificate text-warning"></i>
+              Tensorflow for Deep Learning by IBM</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
@@ -252,11 +311,9 @@
               <i class="fa-li fa fa-trophy text-warning"></i>
               2<sup>nd</sup>
               Place - Code for Beer Hackathon 2017</li>
-{#            <li>#}
-{#              <i class="fa-li fa fa-trophy text-warning"></i>#}
-{#              2<sup>nd</sup>#}
-{#              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>#}
-{#            <li>#}
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Social Innovation Speaker at Manipal Conclave 2015</li>
 {#            <li>#}
 {#              <i class="fa-li fa fa-trophy text-warning"></i>#}
 {#              1<sup>st</sup>#}
